--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
   google_fonts: ^4.0.3
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,13 @@ flutter:
   assets:
     - assets/vbank.png
     - assets/contact.jpeg
+    - assets/verve.png
+    - assets/space.jpg
+    - assets/ocean.jpg
+    - assets/camels.jpg
+    - assets/saudi.jpg
+    - assets/bus.jpg
+    - assets/hills.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
